--- a/mi/mi.html
+++ b/mi/mi.html
@@ -3,58 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <title>小米商城 - 小米10Pro、RedmiMIX Alpha</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css"/>
-    <link rel="icon" href="//s01.mifile.cn/favicon.ico" type="image/x-icon"/>
+    <link href="css/style.css" rel="stylesheet" type="text/css"/>
+    <link href="img/page/mi.png" rel="icon" type="image/x-icon"/>
     <script src="js/mi.js"></script>
 </head>
 <body>
 <div class="header">
-    <div class="header-img">
-    </div>
+    <div class="header-img"></div>
     <div class="header-nav">
         <div class="nav-middle">
             <div class="nav-left">
-                <a href="//www.mi.com/index.html">小米商城</a>
+                <a>小米商城</a>
                 <span>|</span>
-                <a href="//www.miui.com/" target="_blank">MIUI</a>
+                <a>MIUI</a>
                 <span>|</span>
-                <a href="//iot.mi.com" target="_blank">IoT</a>
+                <a>IoT</a>
                 <span>|</span>
-                <a href="//i.mi.com/" target="_blank">云服务</a>
+                <a>云服务</a>
                 <span>|</span>
-                <a href="//airstar.com/home" target="_blank">天星数科</a>
+                <a>天星数科</a>
                 <span>|</span>
-                <a href="//youpin.mi.com/" target="_blank">有品</a>
+                <a>有品</a>
                 <span>|</span>
-                <a href="//xiaoai.mi.com/" target="_blank">小爱开放平台</a>
+                <a>小爱开放平台</a>
                 <span>|</span>
-                <a href="//qiye.mi.com/" target="_blank">企业团购</a>
+                <a>企业团购</a>
                 <span>|</span>
-                <a href="//www.mi.com/aptitude/list/?id=41" target="_blank">资质证照</a>
+                <a>资质证照</a>
                 <span>|</span>
-                <a href="//www.mi.com/aptitude/list/" target="_blank">协议规则</a>
+                <a>协议规则</a>
                 <span>|</span>
-                <a href="//www.mi.com/appdownload/" target="_blank">下载app
-                    <!--<span class="appcode">小米商城APP</span>-->
-                </a>
+                <a>下载app</a>
                 <span>|</span>
-                <a href="https://xiaomishare.mi.com/?from=micom">智能生活</a>
+                <a>智能生活</a>
                 <span>|</span>
-                <a href="#">Select Location</a>
+                <a>Select Location</a>
             </div>
             <div class="nav-right">
-                <a href="//www.mi.com/buy/cart">
-                    <img src="img/shoppingcart.png"/>
+                <a>
+                    <img src="img/page/shoppingcart.png"/>
                     购物车
                     <span>（0）</span>
                 </a>
             </div>
             <div class="nav-message">
-                <a href="//order.mi.com/site/login?redirectUrl=https://www.mi.com/">登录</a>
+                <a>登录</a>
                 <span>|</span>
-                <a href="//account.xiaomi.com/pass/register">注册</a>
+                <a>注册</a>
                 <span>|</span>
-                <a href="//www.mi.com/user/message">消息通知</a>
+                <a>消息通知</a>
             </div>
         </div>
     </div>
@@ -66,37 +63,37 @@
             <div class="select-nav">
                 <ul>
                     <li>
-                        <a href="#">小米手机</a>
+                        <a>小米手机</a>
                     </li>
                     <li>
-                        <a href="#">Redmi红米</a>
+                        <a>Redmi红米</a>
                     </li>
                     <li>
-                        <a href="#">电视</a>
+                        <a>电视</a>
                     </li>
                     <li>
-                        <a href="#">笔记本</a>
+                        <a>笔记本</a>
                     </li>
                     <li>
-                        <a href="#">家电</a>
+                        <a>家电</a>
                     </li>
                     <li>
-                        <a href="#">路由器</a>
+                        <a>路由器</a>
                     </li>
                     <li>
-                        <a href="#">智能硬件</a>
+                        <a>智能硬件</a>
                     </li>
                     <li>
-                        <a href="https://www.mi.com/service/" target="_blank">服务</a>
+                        <a>服务</a>
                     </li>
                     <li>
-                        <a href="http://www.xiaomi.cn/" target="_blank">社区</a>
+                        <a>社区</a>
                     </li>
                 </ul>
             </div>
             <div class="select-search">
-                <form action="//search.mi.com/search" method="get">
-                    <input type="search" id="search" /><input type="submit" id="sumbit" value=""/>
+                <form>
+                    <input class="search" type="search" /><input class="sumbit" type="submit" value=""/>
                 </form>
             </div>
         </div>
@@ -104,6 +101,39 @@
 </div>
 <div class="home-hero-contains">
     <div class="home-hero">
+        <div class="home-hero-top">
+            <div class="top-left">
+                <ul>
+                    <li><a>手机 电话<em></em></a></li>
+                    <li><a>电视 盒子<em></em></a></li>
+                    <li><a>笔记本 显示器<em></em></a></li>
+                    <li><a>家电 插线板<em></em></a></li>
+                    <li><a>出行 穿戴<em></em></a></li>
+                    <li><a>智能 路由器<em></em></a></li>
+                    <li><a>电源 配件<em></em></a></li>
+                    <li><a>健康 儿童<em></em></a></li>
+                    <li><a>耳机 音箱<em></em></a></li>
+                    <li><a>生活 箱包<em></em></a></li>
+                </ul>
+            </div>
+            <div class="top-right">
+                <div class="CarouselImg">
+                </div>
+                <div class="CarouselList">
+                    <a></a>
+                    <a></a>
+                    <a></a>
+                    <a></a>
+                    <a></a>
+                </div>
+                <div class="CarouselLeft"></div>
+                <div class="CarouselRight"></div>
+            </div>
+        </div>
+        <div class="home-hero-bottom">
+            <div class="bottom-left"></div>
+            <div class="bottom-right"></div>
+        </div>
     </div>
 </div>
 <div class="page-main-contains">
@@ -111,26 +141,136 @@
     </div>
 </div>
 <div class="foot">
-        <div class="footer">
-            <div class="list">
-                <ul>
-                    <li><a  href="//www.mi.com/service/quick-repair" target="_blank">预约维修服务</a></li>
-                    <li><a  href="//www.mi.com/service/exchange#back" target="_blank" >7天无理由退货</a></li>
-                    <li><a  href="//www.mi.com/service/exchange#back" target="_blank">15天免费换货</a></li>
-                    <li><a  href="//www.mi.com/service/buy/Postal%20policy" target="_blank" ><span id="J_footerPrice">满99元包邮</span></a></li>
-                    <li><a  href="//www.mi.com/service/sitelist" target="_blank" >520余家售后网点</a></li>
-                </ul>
+    <div class="footer">
+        <div class="list">
+            <ul>
+                <li><a>
+                    <img src="img/page/Aftersale.png" />
+                    预约维修服务</a></li>
+                <li><a>
+                    <img src="img/page/sevenDay.png" />
+                    7天无理由退货</a></li>
+                <li><a>
+                    <img src="img/page/15Day.png" />
+                    15天免费换货</a></li>
+                <li><a>
+                    <img src="img/page/gift.png" />
+                    满99元包邮</a></li>
+                <li><a>
+                    <img src="img/page/position.png" />
+                    520余家售后网点</a></li>
+            </ul>
+        </div>
+        <div class="footer-links">
+            <dl>
+                <dt>帮助中心</dt>
+                <dd><a>账户管理</a></dd>
+                <dd><a>购物指南</a></dd>
+                <dd><a>订单操作</a></dd>
+            </dl>
+            <dl>
+                <dt>服务支持</dt>
+                <dd><a>售后政策</a></dd>
+                <dd><a>自助服务</a></dd>
+                <dd><a>相关下载</a></dd>
+            </dl>
+            <dl>
+                <dt>线下门店</dt>
+                <dd><a>小米之家</a></dd>
+                <dd><a>服务网点</a></dd>
+                <dd><a>授权体验店</a></dd>
+            </dl>
+            <dl>
+                <dt>关于小米</dt>
+                <dd><a>了解小米</a></dd>
+                <dd><a>加入小米</a></dd>
+                <dd><a>投资者关系</a></dd>
+                <dd><a>企业社会责任</a></dd>
+                <dd><a>廉洁举报</a></dd>
+            </dl>
+            <dl>
+                <dt>关注我们</dt>
+                <dd><a>新浪微博</a></dd>
+                <dd><a>官方微信</a></dd>
+                <dd><a>联系我们</a></dd>
+                <dd><a>公益基金会</a></dd>
+            </dl>
+            <dl>
+                <dt>特色服务</dt>
+                <dd><a>F 码通道</a></dd>
+                <dd><a>礼物码</a></dd>
+                <dd><a>防伪查询</a></dd>
+            </dl>
+            <div class="contact">
+                <div class="mode">
+                    <p>400-100-5678</p>
+                    <p>8:00-18:00（仅收市话费）</p>
+                    <a><img src="img/page/chat.png">人工客服 </a>
+                </div>
+                <div class="follow">
+                    关注小米：
+                    <a><img src="img/page/micro-blog.png"></a>
+                    <a><img src="img/page/wechat.png">  </a>
+                </div>
             </div>
-
-        </div>
-    <div class="info-contains">
-        <div class="info">
-            <div class="container">
-
-        </div>
-
         </div>
     </div>
-</div>
+    <div class="info-contains">
+        <div class="info">
+                <div class="One"></div>
+                <div class="two">
+                    <div class="twop">
+                        <p>
+                            <a>小米商城</a> <span>|</span>
+                            <a >MIUI</a> <span>|</span>
+                            <a>米家</a><span>|</span>
+                            <a>米聊</a> <span>|</span>
+                            <a>多看</a> <span>|</span>
+                            <a>游戏</a> <span>|</span>
+                            <a>政企服务</a> <span>|</span>
+                            <a>小米天猫店</a> <span>|</span>
+                            <a>小米集团隐私政策</a> <span>|</span>
+                            <a>小米公司儿童信息保护规则</a> <span>|</span>
+                            <a>小米商城隐私政策</a> <span>|</span>
+                            <a>小米商城用户协议</a> <span>|</span>
+                            <a>问题反馈</a> <span>|</span>
+                            <a>Select Location</a>
+                        </p>
+                        <p>
+                            <a>北京互联网法院法律服务工作站</a><span>|</span>
+                            <a>中国消费者协会</a> <span>|</span>
+                            <a>北京市消费者协会</a>
+                        </p>
+                        <p>
+                            <a>©mi.com</a>
+                            <span>京ICP证110507号</span>
+                            <a>京ICP备10046444号</a>
+                            <a>京公网安备11010802020134号</a>
+                            <a>京网文[2020]0276-042号</a> <br>
+                            <a>（京）网械平台备字（2018）第00005号</a>
+                            <a>互联网药品信息服务资格证 (京)-非经营性-2014-0090</a>
+                            <a>营业执照</a> <a>医疗器械质量公告</a> <br>
+                            <a>增值电信业务许可证</a>
+                            <span>&nbsp;网络食品经营备案 京食药网食备202010048 &nbsp;</span>
+                            <a>食品经营许可证</a> <br>
+                            <span>违法和不良信息举报电话：171-5104-4404&nbsp;</span>
+                            <a>知识产权侵权投诉</a>
+                            <span>&nbsp;本网站所列数据，除特殊说明，所有数据均出自我司实验室测试</span>
+                        </p>
+                    </div>
+
+                    <div class="three">
+                    <a><img src="img/page/Privacy.png"></a>
+                    <a><img src="img/page/v-logo0.png"></a>
+                    <a><img src="img/page/v-logo.png"></a>
+                    <a><img src="img/page/management.png"></a>
+                    <a><img src="img/page/serviced.png">
+                    </a>
+                </div></div>
+                </div>
+        <div class="slogan"></div>
+            </div>
+        </div>
+
 </body>
 </html>
