小米闪购轮播没有达到想要的效果

--- a/mi/mi.html
+++ b/mi/mi.html
@@ -374,7 +374,7 @@
             </div>
             <div class="select-search">
                 <form>
-                    <input class="search" type="search" /><input class="sumbit" type="submit" value=""/>
+                    <input class="search" id="search" type="search" placeholder="小米" /><input class="sumbit" type="submit" value=""/>
                 </form>
             </div>
         </div>
